--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
 <meta charset="UTF-8" />
-<title>GarageGone.co.uk | Garage Removal & Clearance Manchester & North West</title>
+<title>GarageGone | Garage Removal & Clearance Manchester & North West</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="GarageGone.co.uk – expert garage removal and clearance across Manchester & North West. Licensed asbestos removal, full clearance, cleaning, and organisation. Job well gone." />
 <script src="https://cdn.tailwindcss.com"></script>
